=== 2.0.10 / 4 Feb 2009

* Added Net::SSH.configuration_for to make it easier to query the SSH configuration file(s) [Jamis Buck]


=== 2.0.9 / 1 Feb 2009

* Specifying non-nil user argument overrides user in .ssh/config [Jamis Buck]

* Ignore requests for non-existent channels (workaround ssh server bug) [Jamis Buck]

* Add terminate! method for hard shutdown scenarios [Jamis Buck]

* Revert to pre-2.0.7 key-loading behavior by default, but load private-key if public-key doesn't exist [Jamis Buck]

* Make sure :passphrase option gets passed to key manager [Bob Cotton]


=== 2.0.8 / 29 December 2008

* Fix private key change from 2.0.7 so that keys are loaded just-in-time, avoiding unecessary prompts from encrypted keys. [Jamis Buck]


=== 2.0.7 / 29 December 2008

* Make key manager use private keys instead of requiring public key to exist [arilerner@mac.com]

* Fix failing tests [arilerner@mac.com]

* Don't include pageant when running under JRuby [Angel N. Sciortino]


=== 2.0.6 / 6 December 2008

* Update the Manifest file so that the gem includes all necessary files [Jamis Buck]


=== 2.0.5 / 6 December 2008

* Make the Pageant interface comply with more of the Socket interface to avoid related errors [Jamis Buck]

* Don't busy-wait on session close for remaining channels to close [Will Bryant]

* Ruby 1.9 compatibility [Jamis Buck]

* Fix Cipher#final to correctly flag a need for a cipher reset [Jamis Buck]


=== 2.0.4 / 27 Aug 2008

* Added Connection::Session#closed? and Transport::Session#closed? [Jamis Buck]

* Numeric host names in .ssh/config are now parsed correct [Yanko Ivanov]

* Make sure the error raised when a public key file is malformed is more informative than a MethodMissing error [Jamis Buck]

* Cipher#reset is now called after Cipher#final, with the last n bytes used as the next initialization vector [Jamis Buck]


=== 2.0.3 / 27 Jun 2008

* Make Net::SSH::Version comparable [Brian Candler]
