@@ -35,23 +35,31 @@ module Net; module SSH
       # encrypted (requiring a passphrase to use), the user will be
       # prompted to enter their password unless passphrase works. 
       def load_private_key(filename, passphrase=nil)
-        file = File.read(File.expand_path(filename))
+        data = File.read(File.expand_path(filename))
+        load_data_private_key(data, passphrase, filename)
+      end
 
-        if file.match(/-----BEGIN DSA PRIVATE KEY-----/)
+      # Loads a private key. It will correctly determine
+      # whether the file describes an RSA or DSA key, and will load it
+      # appropriately. The new key is returned. If the key itself is
+      # encrypted (requiring a passphrase to use), the user will be
+      # prompted to enter their password unless passphrase works. 
+      def load_data_private_key(data, passphrase=nil, filename="")
+        if data.match(/-----BEGIN DSA PRIVATE KEY-----/)
           key_type = OpenSSL::PKey::DSA
-        elsif file.match(/-----BEGIN RSA PRIVATE KEY-----/)
+        elsif data.match(/-----BEGIN RSA PRIVATE KEY-----/)
           key_type = OpenSSL::PKey::RSA
-        elsif file.match(/-----BEGIN (.*) PRIVATE KEY-----/)
+        elsif data.match(/-----BEGIN (.*) PRIVATE KEY-----/)
           raise OpenSSL::PKey::PKeyError, "not a supported key type '#{$1}'"
         else
           raise OpenSSL::PKey::PKeyError, "not a private key (#{filename})"
         end
 
-        encrypted_key = file.match(/ENCRYPTED/)
+        encrypted_key = data.match(/ENCRYPTED/)
         tries = 0
 
         begin
-          return key_type.new(file, passphrase || 'invalid')
+          return key_type.new(data, passphrase || 'invalid')
         rescue OpenSSL::PKey::RSAError, OpenSSL::PKey::DSAError => e
           if encrypted_key
             tries += 1
@@ -72,6 +80,13 @@ module Net; module SSH
       # appropriately. The new public key is returned.
       def load_public_key(filename)
         data = File.read(File.expand_path(filename))
+        load_data_public_key(data, filename)
+      end
+
+      # Loads a public key. It will correctly determine whether
+      # the file describes an RSA or DSA key, and will load it
+      # appropriately. The new public key is returned.
+      def load_data_public_key(data, filename="")
         type, blob = data.split(/ /)
 
         raise Net::SSH::Exception, "public key at #{filename} is not valid" if blob.nil?
