@@ -1,3 +1,8 @@
+=== (unreleased)
+
+* Add :key_data option for specifying raw private keys in PEM format [Alex Holems, Andrew Babkin]
+
+
 === 2.0.10 / 4 Feb 2009
 
 * Added Net::SSH.configuration_for to make it easier to query the SSH configuration file(s) [Jamis Buck]
